--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -161,6 +162,7 @@ allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
+allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
@@ -186,7 +188,6 @@ allow 173.249.57.253;
 allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.162.209.56;
@@ -1240,6 +1241,7 @@ allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
+allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
@@ -1320,7 +1322,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1604,7 +1605,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.195.173.84;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1686,6 +1686,7 @@ allow 45.95.169.228;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.202.48;
+allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1715,7 +1716,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1737,6 +1737,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.72.254.125;
 allow 5.2.79.190;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1788,6 +1789,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.31.79.149;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1859,7 +1861,6 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
-allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
@@ -1919,6 +1920,7 @@ allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
+allow 94.230.208.148;
 allow 94.32.66.15;
 allow 94.75.225.81;
 allow 95.128.43.164;
@@ -1929,5 +1931,4 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
-allow 96.42.26.63;
 allow 98.128.173.33;
