--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -146,13 +147,14 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 156.146.63.183;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
+allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
@@ -274,7 +276,7 @@ allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.52.180;
-allow 185.195.237.238;
+allow 185.193.66.127;
 allow 185.195.71.10;
 allow 185.195.71.11;
 allow 185.195.71.12;
@@ -1321,6 +1323,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1339,7 +1342,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1604,6 +1606,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.209.105.74;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1714,6 +1717,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1736,7 +1740,6 @@ allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
-allow 54.221.149.34;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1817,7 +1820,6 @@ allow 84.38.134.231;
 allow 84.38.134.232;
 allow 84.38.134.233;
 allow 84.38.134.234;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1929,5 +1931,4 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
-allow 95.232.0.213;
 allow 98.128.173.33;
