--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -448,6 +448,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -466,7 +467,6 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
