--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -22,7 +21,6 @@ set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
-set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
@@ -148,7 +146,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -977,7 +974,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.133.162;
@@ -1001,7 +997,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -1096,7 +1091,6 @@ set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
-set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
@@ -1342,6 +1336,7 @@ set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
@@ -1606,7 +1601,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.209.105.74;
+set_real_ip_from 34.236.3.251;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1679,7 +1674,6 @@ set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.95.169.184;
-set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
 set_real_ip_from 45.95.169.225;
 set_real_ip_from 45.95.169.226;
@@ -1820,6 +1814,7 @@ set_real_ip_from 84.38.134.231;
 set_real_ip_from 84.38.134.232;
 set_real_ip_from 84.38.134.233;
 set_real_ip_from 84.38.134.234;
+set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
