--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -632,7 +633,6 @@ allow 193.233.133.109;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
-allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
 allow 193.41.226.117;
@@ -1320,6 +1320,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1712,6 +1713,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1734,7 +1736,6 @@ allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
-allow 54.235.4.184;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1845,6 +1846,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
+allow 89.187.143.31;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.153;
@@ -1857,6 +1859,7 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
