--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -447,6 +447,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
